# OS_LW

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt  main.c
lab1/include/: child.h  utils.h
lab1/src/: child1.c  child2.c  file2.txt  parent.c  utils.c
lab2/: CMakeLists.txt  main.cpp
lab2/include/: utils.h
lab2/src/: utils.cpp
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp
